--- a/index.html
+++ b/index.html
@@ -14,6 +14,59 @@
   </head>
   <body>
     <!-- JSscript -->
+
+    <header>
+      <h1>phon Hunter</h1>
+    </header>
+    <main>
+      <section class="container mx-auto">
+        <section class="bg-gray-100 p-4 m-4">
+          <input
+            id="search-field"
+            type="text"
+            placeholder="search..."
+            class="input input-bordered input-warning w-full max-w-xs"
+          />
+          <button onclick="handleSearch()" class="btn btn-accent">
+            search
+          </button>
+        </section>
+        <!-- spinner or loader  -->
+
+        <!-- search ruselt  -->
+      </section>
+      <section>
+        <div id="loading-spinner" class="text-center my-40 hidden">
+          <span class="loading loading-spinner loading-lg"></span>
+        </div>
+        <div
+          id="phone-container"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-8"
+        ></div>
+        <div id="show-all-container" class="hidden mt-4 text-center my-8">
+          <button onclick="handleShowAll()" class="btn btn-neutral">
+            show All
+          </button>
+        </div>
+      </section>
+
+      <!-- show details model  -->
+      <!-- Open the modal using ID.showModal() method -->
+      <!-- <button class="btn" onclick="show_detail_Model.showModal()">
+        open modal
+      </button> -->
+      <dialog id="show_detail_Model" class="modal modal-bottom sm:modal-middle">
+        <form method="dialog" class="modal-box">
+          <h3 id="phon-name" class="font-bold text-lg"></h3>
+
+          <div id="show-detail-container"></div>
+          <div class="modal-action">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </div>
+        </form>
+      </dialog>
+    </main>
     <script src="./js/phon.js"></script>
   </body>
 </html>
